--- a/css/app.css
+++ b/css/app.css
@@ -75,17 +75,23 @@ a:hover {
   align-items: center;
 }
 .section .links a{
-  padding: 1.5em;
+  padding: 1.3em;
 }
 .iphone-demo {
   flex-grow: 1;
   flex-basis: 0;
   align-self: stretch;
-  background-color: rgba(255,0,0,0.3);
+  /*background-color: rgba(255,0,0,0.3);*/
+  padding: 3em;
+}
+.iphone-demo img{
+  height: 632px;
+  width: 300px;
 }
 .feature-description {
   flex-grow: 1;
   flex-basis: 0;
   align-self: stretch;
-  background-color: rgba(0,255,0,0.3);
+  /*background-color: rgba(0,255,0,0.3);*/
+  padding: 4em;
 }
